Second commit 07.06.2015 00.55